--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -3766,7 +3766,7 @@ li.pingback:first-child {
 #myUL li a {
   border: 1px solid #ddd; /* Add a border to all links */
   margin-top: -1px; /* Prevent double borders */
-  background-color:rgb(33,150,243, 0.3); /* Grey background color */
+  background-color:white; /* Grey background color */
   padding: 6px; /* Add some padding */
   text-decoration: none; /* Remove default text underline */
   font-size: 12px; /* Increase the font-size */
@@ -3778,6 +3778,25 @@ li.pingback:first-child {
 
 #myUL li a:hover:not(.header) {
   background-color: #eee; /* Add a hover effect to all links, except for headers */
+}
+
+.tag-workflow{
+  border: 1px solid #ddd; /* Add a border to all links */
+  margin-top: -1px; /* Prevent double borders */
+  background-color:white; /* Grey background color */
+  padding: 6px; /* Add some padding */
+  text-decoration: none; /* Remove default text underline */
+  font-size: 12px; /* Increase the font-size */
+  color: black; /* Add a black text color */
+  display: inline;
+  border-radius: 5px;
+  margin-right:2px;
+}
+
+.workflow-image{
+  padding:20px;
+  width: 500px;
+  height: 300px;
 }
 
 /*
