--- a/layouts/workflows/list.html
+++ b/layouts/workflows/list.html
@@ -157,15 +157,22 @@
 
             
             html_el += '<p class="feature-text">'+results[page].content+'</p>'
+
+            html_el += '<div class="tags"  style="padding-bottom: 10px;text-transform: capitalize;">Tags:'
+                    for(var img in results[page].tags){
+                    
+                    html_el += '<a class="tag-workflow" href="/tags/'+results[page].tags[img]+'">'+results[page].tags[img]+'</a>'
+                }
+                html_el +='</div>'
             html_el += '<div class="getting-started-button">'
 
-            if (results[page].download != "<no value>"){
+            if (results[page].download != "" && results[page].download != '<no value>' ){
                 html_el += '<a href="https://service.biolab.si/download/workflow?name='+results[page].download+'" class="no-break-buttons" target="_blank"><div class="learn-more feature-block"><div class="feature-block fa fa-download jsonly"></div><div class="feature-block feature-link">Download</div></div></a>&nbsp;&nbsp;'
             }
-            if (results[page].video != "<no value>"){
+            if (results[page].video != "" && results[page].video != '<no value>' ){
                 html_el += '<a class="lightbox no-break-buttons" href="'+results[page].video +'"target="_blank"><div class="feature-block fa fa-play-circle-o jsonly"></div><div class="feature-block feature-link">Watch Video</div></a>&nbsp;&nbsp;'
             }
-            if (results[page].blog != "<no value>"){
+            if (results[page].blog != "" && results[page].blog != '<no value>' ){
                 html_el += '<a class="lightbox no-break-buttons" href="https://singlecell.biolab.si/blog/'+results[page].blog+'"><div class="feature-block fa fa-book jsonly"></div><div class="feature-block feature-link">Blog post</div></a>&nbsp;&nbsp;'
             }
 
