--- a/layouts/taxonomy/category.html
+++ b/layouts/taxonomy/category.html
@@ -1,5 +1,5 @@
 {{ define "main"}}
-  <div class="container" style="background-color: white; padding-top: 120px;">
+  <div class="container" style="background-color: white;">
 
       {{ partial "category.html" . }}
       </div>
