--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -1,179 +1,213 @@
 {{ define "main"}}
-<div class="container" style="background-color: white; ">
-	<div class="input-group example search-field" style="padding-top: 120px;">
-	  <input type="text" data-search-input id="search-input"placeholder="Search..." name="search">
-	  <span class="input-group-btn">
-	  	<button type="button" onclick="search_content()">
-	  		<i class="fa fa-search"></i>
-	  	</button>
-	  </span>
-	</div>
-   <div class="row">
-   	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="search-results" style="display: none;">
-   		
-   	</div>
-      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="post_nor">
-         <div class="post type-post status-publish format-standard hentry category-design tag-memories tag-normal-post tag-standard-2 excerpt zoom full-without-featured excerpt intro-title">
-            <div class='excerpt-intro excerpt-header'>
-            	<div class="row">            		
-            		<div>
-            			<!-- <img style="width:300px;" src="/images/interactive_data_vis_01_scaled.png"> -->
-		               <h2 class='feature-title entry-title-intro'>
-		                  scOrange Blog
-		               </h2>
-           			</div>
-		            
-        		</div>
-            </div>
-        
-         </div>
-         <div class="hline-separator intro-separator">
-               </div>
-         {{ $paginator := .Paginate (where (where .Pages.ByDate.Reverse "Type" "blog") "IsPage" true) }}
-         {{ range $index, $element := .Paginator.Pages }}
-         {{ if and (isset .Params "image") .Params.image }}
-         {{ if eq (mod $index 2) 0 }}
-         <div class="post type-post status-publish format-standard has-post-thumbnail hentry category-design tag-memories tag-normal-post tag-standard-2 excerpt zoom full-without-featured odd excerpt" >
-            {{ else }}
-            <div class="post type-post status-publish format-standard has-post-thumbnail hentry category-design tag-memories tag-normal-post tag-standard-2 excerpt zoom full-without-featured even excerpt">
-               {{ end }}
-               {{ else }}
-               <div class="post type-post status-publish format-standard hentry category-standard category-travel excerpt zoom full-without-featured odd excerpt">
-                  {{ end }}
-                  {{ if and (isset .Params "image") .Params.image }}
-                  <a class="featured-image-link" href="{{ .Permalink }}">
-                     <div class='featured-image lazy lazy-bg-image'>
-                        <img src="{{.Params.thumbImage}}">
-                     </div>
-                  </a>
-                  {{ end }}
-                  <div class="excerpt-container">
-                     <div class="excerpt-meta">
-                        <span class="date">{{ .Date.Format "02 January" }}</span>	<span>  </span>
-                        {{ if and (isset .Site.Params "author") .Site.Params.author }}
-                        <span class="author">/
-                        {{ if and (isset .Site.Params "authorlink") .Site.Params.authorLink }}
-                        <a href="{{ .Site.Params.authorLink | default "" | absURL }}" title="Posts by {{ .Site.Params.author | default "" }}" rel="author">{{ .Site.Params.author  | default "" }}</a>
-                        {{ else }}
-                        {{ .Site.Params.author | default "" }}
-                        {{ end }}
-                        </span>
-                        {{ end }}
-                        {{ range .Params.categories }}
-                        <span> / </span>
-                        <span class="category">
-                        <a href="/categories/{{ . | urlize }}">{{ . }}</a>
-                        </span>
-                        {{ end }}
-                     </div>
-                     <div class='excerpt-header'>
-                        <h2 class='excerpt-title'>
-                           <a href="{{ .Permalink }} "> {{ .Title }} </a>
-                        </h2>
-                     </div>
-                     <div class='excerpt-content'>
-                        <article class="blog-excerpt">
-                           <span >
-                           {{ if .Params.longExcerpt }}
-                           {{ .Params.longExcerpt}}
-                           {{else}}
-                           {{ .Summary }}
-                           {{end}}
-                           </span>
-                           <div class="more-link-wrapper"><a class="more-link" href="{{ .Permalink }}" >Read the post<span class="screen-reader-text">This is a Standard Post</span></a></div>
-                        </article>
-                     </div>
-                  </div>
-               </div>
-               <div class="hline-separator">
-               </div>
-               {{ end }}
 
-            </div>
-				    <script type="text/javascript">
-				      function search_content(){
-				      	
-				      	var param = document.getElementById('search-input').value;
-
-				      	if (param.trim() ==""){
-							$("#post_nor").show();
-							$("#search-results").hide();
-				      	}
-				      	else{
-					      	$("#post_nor").hide();
-					      	var html_el = '<div class="post type-post status-publish format-standard hentry category-design tag-memories tag-normal-post tag-standard-2 excerpt zoom full-without-featured excerpt"> <div class="excerpt-content"> <article class="search-result-title"> Search results for: <b>'+ param +'</b></article></div></div> ';
-
-					      	var results  = search(param);
-					      	$("#search-results").show();
-					      	var search_results = document.getElementById('search-results')
-					     	search_results.innerHTML = "";
-                     console.log(results);
-					     	
-					      	for(var page in results){
-					      		if ( results[page].image != "<no value>"){
-					      			if (page % 2 == 0){
-					      				html_el += '<div class="post type-post status-publish format-standard has-post-thumbnail hentry category-design tag-memories tag-normal-post tag-standard-2 excerpt zoom full-without-featured odd excerpt" >'
-					      			}
-					      			else{
-					      				html_el += '<div class="post type-post status-publish format-standard has-post-thumbnail hentry category-design tag-memories tag-normal-post tag-standard-2 excerpt zoom full-without-featured even excerpt">'
-					      			}
-
-					      		}
-					      		else{
-					      			html_el += '<div class="post type-post status-publish format-standard hentry category-standard category-travel excerpt zoom full-without-featured odd excerpt">';
-
-					      		}
-
-					      		if ( results[page].thumbImage != "<no value>"){
-					      			html_el += '<a class="featured-image-link" href="' + results[page].uri+'"><div class="featured-image lazy lazy-bg-image"><img src="'+results[page].thumbImage +'"></div></a>';
-
-					      		}
-					      		else if (results[page].image != "<no value>"){
-					      			html_el += '<a class="featured-image-link" href="' + results[page].uri+'"><div class="featured-image lazy lazy-bg-image"><img src="'+results[page].image +'"></div></a>';
-					      		}
-					      		html_el += '<div class="excerpt-container"><div class="excerpt-meta"><span class="date">';
-
-                           if (results[page].date != "<no value>") {
-
-                              html_el += results[page].date + '</span> <span> / </span>';
-                           }
-
-					      		if (results[page].author != "<no value>") {
-
-					      			html_el += '<span class="author">'+results[page].author+'</span>';
-					      		}
-					      		if ( results[page].categories != "<no value>"){
-					      			for (categories in results[page].categories){
-					      				html_el += '<span> / </span><span class="category"><a href="/categories/'+ encodeURIComponent(results[page].categories[categories])+'">'+results[page].categories[categories]+'</a></span>';
-					      			}	
-					      		}
-					      		html_el += '</div> <div class="excerpt-header"><h2 class="excerpt-title"><a href="'+"test"+'"> '+results[page].title+' </a> </h2></div> <div class="excerpt-content"><article class="blog-excerpt">';
-					      		if (results[page].longExcerpt != "<no value>" && results[page].longExcerpt != "" ){
-					      			html_el += results[page].longExcerpt
-					      		}
-					      		else{
-					      			html_el += results[page].summary
-					      		}
-					      		html_el += '<div class="more-link-wrapper"><a class="more-link" href="'+results[page].uri+'">Read the post<span class="screen-reader-text">This is a Standard Post</span></a></div></article></div> </div></div> <div class="hline-separator"></div> </div>';
-
-						    }
-						    search_results.innerHTML += html_el;
-					}
-					}
-				   </script>
-				   <script type="text/javascript" src="{{"js/lunr.min.js" | relURL}}"></script>
-				   <script type="text/javascript" src="{{"js/auto-complete.js" | relURL}}"></script>
-				   <link href="{{"css/auto-complete.css" | relURL}}" rel="stylesheet">
-				   <script type="text/javascript">
-				      var baseurl = "{{.Site.BaseURL}}";
-				   </script>
-				   <script type="text/javascript" src="{{"js/search.js" | relURL}}"></script>
-
-               </section>
-            <!-- </div> -->
-         </div>
+<section id="features" class="features section padding-bottom ">
+    <div class="container page-background getting-started">
+        <div style="text-align: center">
+           <h2 style="font-size: 34px;margin-top: 0px;" >
+              scOrange Blog
+           </h2>
+        </div>
+    <div class="row" style="padding-left: 20px;">
+      <div class="col-xs-12 col-md-12 content" style="margin-top: 20px;  display: inline;">
+         <input type="text" class="jsonly search-widget-workflow" id="search-input" style="width: 90%;" placeholder="Search workflows" tabindex="1" onkeydown="check_key(event)" autofocus />
+        <button type="button" class="search-button-workflow" id="searchBtn" onclick="search_content()">
+            <i class="fa fa-search"></i>
+        </button>
       </div>
-   </div>
+      
+    </div>
+    <div style="margin-top: 5px;padding-left: 20px;" id="myUL">
+        <ul >
+            <span>Categories: </span>
+          {{ range first 10 .Site.Taxonomies.categories.ByCount }}
+            <li style="display: inline;text-transform: capitalize;"><a href="/categories/{{ .Name | urlize }}">{{ .Name }}</a></li>
+          {{ end }}
+        </ul>
+    </div>
+
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="search-results" style="display: none;">  
+    </div>
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="post_nor">
+    {{ $paginator := .Paginate (where (where .Pages.ByWeight.Reverse "Type" "blog") "IsPage" true) }}
+    {{ range $index, $element := .Paginator.Pages }}
+        <div class=" row">
+            {{ if eq (mod $index 2) 0 }}
+            <div class='content col-md-6 col-xs-12 feature-description pull-left' style="padding-top: 60px;">
+            {{else}}
+            <div class='content col-md-6 col-xs-12 feature-description pull-right' style="padding-top: 60px;">
+            {{end}}
+                <h2 class="workflow-title">
+                    {{ .Title }}
+                </h2>
+                <p class="feature-text">{{ .Params.longExcerpt }}</p>
+                <div class="tags" style="padding-bottom: 10px;text-transform: capitalize;">
+                    Categories:
+                    {{range .Params.categories}}
+                    <a class="tag-workflow" href="/categories/{{ . | urlize }}">{{ . }}</a>
+                    {{end}}
+                </div>
+                <div class="getting-started-button" style="text-align:right">
+                        
+                    
+                    <a href="{{ .Permalink }}" class="no-break-buttons">
+                    <div class="learn-more feature-block">
+                        
+                        <div class="feature-block feature-link">Read More</div>
+                        <div class="feature-block fa fa-arrow-circle-o-right jsonly" > </div>
+                    </div>
+                </a>
+                    &nbsp;&nbsp;
+                </div>
+               
+                </div>
+            <div class='content col-md-6 col-xs-12 {{if eq (mod $index 2) 0}}panel-left {{else }}{{ end }}' style="padding: 20px;padding-top: 0px;">
+                <img src="{{.Params.thumbImage}}" class="workflow-image" >
+            </div>
+            
+              
+            
+            </div>
+            <hr/>
+            <!-- </div> -->
+{{end}}
+    </div>
+    
+    
+
 </div>
 {{ partial "pagination.html" . }}
+
+</section>
+
+
+<script type="text/javascript">
+    function check_key(e){
+        if(e.keyCode == 13) {
+            search_content();
+        }
+        else if(e.keyCode == 8){
+            if(document.getElementById('search-input').value.length <= 1){
+                $("#post_nor").show();
+                $("#search-results").hide();
+            }
+        }  
+    }
+
+  function search_content(){
+    
+    var param = document.getElementById('search-input').value;
+
+    if (param.trim() ==""){
+        $("#post_nor").show();
+        $("#search-results").hide();
+    }
+    else{
+        $("#post_nor").hide();
+    
+
+        // var results  = search(param);
+        $("#search-results").show();
+        // var search_results = document.getElementById('search-results')
+        // search_results.innerHTML = "";
+        // var html_el = ""
+
+        for(var page in results){
+            html_el += '<div class="row">';
+            if (page % 2 == 0){
+                html_el += '<div class="content col-md-6 col-xs-12 feature-description pull-left">';
+            }
+            else{
+                html_el += '<div class="content col-md-6 col-xs-12 feature-description pull-right"';
+            }
+            html_el += '<h2 class="workflow-title">'+results[page].title+'</h2>'
+
+            
+            html_el += '<p class="feature-text">'+results[page].content+'</p>'
+
+            html_el += '<div class="tags"  style="padding-bottom: 10px;text-transform: capitalize;">Tags:'
+                    for(var img in results[page].tags){
+                    
+                    html_el += '<a class="tag-workflow" href="/tags/'+results[page].tags[img]+'">'+results[page].tags[img]+'</a>'
+                }
+                html_el +='</div>'
+            html_el += '<div class="getting-started-button">'
+
+            if (results[page].download != "" && results[page].download != '<no value>' ){
+                html_el += '<a href="https://service.biolab.si/download/workflow?name='+results[page].download+'" class="no-break-buttons" target="_blank"><div class="learn-more feature-block"><div class="feature-block fa fa-download jsonly"></div><div class="feature-block feature-link">Download</div></div></a>&nbsp;&nbsp;'
+            }
+            if (results[page].video != "" && results[page].video != '<no value>' ){
+                html_el += '<a class="lightbox no-break-buttons" href="'+results[page].video +'"target="_blank"><div class="feature-block fa fa-play-circle-o jsonly"></div><div class="feature-block feature-link">Watch Video</div></a>&nbsp;&nbsp;'
+            }
+            if (results[page].blog != "" && results[page].blog != '<no value>' ){
+                html_el += '<a class="lightbox no-break-buttons" href="https://singlecell.biolab.si/blog/'+results[page].blog+'"><div class="feature-block fa fa-book jsonly"></div><div class="feature-block feature-link">Blog post</div></a>&nbsp;&nbsp;'
+            }
+
+
+            html_el += '</div></div>'
+            var position = "";
+            
+            if (page % 2 == 0){
+                html_el += '<div class="content col-md-6 col-xs-12 panel-left" style="padding: 20px;padding-top: 0px;">';
+            }
+            else{
+                html_el += '<div class="content col-md-6 col-xs-12 " style="padding: 20px;padding-top: 0px;">';
+            }
+            if (results[page].images.length >1){
+                html_el+= '<div id="myCarousel'+page+'" class="carousel slide" data-interval="false" > <div class="carousel-inner workflow-slider">'
+                    for(var img in results[page].images){
+                        html_el+= '<div class="item'
+                        if(img==0){
+                            html_el += 'active">'
+                        }
+                        else{
+                            html_el+= '>'
+                        }
+
+                       html_el += '<img src="'+results[page].images[img]+'" class="workflow-image" ></div>'
+                      
+                    }
+                    html_el += '</div>'
+                html_el += '<ol class="carousel-indicators" >'
+                    for(var img in results[page].images){
+                     html_el += '<li data-target="#myCarousel'+page+'" data-slide-to="'+img+'" class="'
+                        if(img==0){
+                                html_el += 'active">'
+                            }
+                        else{
+                            html_el+= '>'
+                        }
+                        html_el +='</li>'
+                    }
+                html_el+='</ol>'
+
+                html_el += '<a class="left carousel-control" href="#myCarousel'+page+'" data-slide="prev"><span class="glyphicon glyphicon-chevron-left" style="color: black;"></span></a>'
+                
+                html_el += '<a class="right carousel-control" href="#myCarousel'+page+'" data-slide="next"><span class="glyphicon glyphicon-chevron-right" style="color: black;"></span></a></div>'
+
+            }
+            else{
+                html_el += '<img class="image'+position+'" src="'+results[page].images+'" style="padding:40px;"></div>'
+
+            }
+
+            
+            html_el += "</div> </div>"
+        }
+        search_results.innerHTML += html_el;
+
+    }
+    }
+     
+   </script>
+   <script type="text/javascript" src="{{"js/lunr.min.js" | relURL}}"></script>
+   <script type="text/javascript" src="{{"js/auto-complete.js" | relURL}}"></script>
+   <link href="{{"css/auto-complete.css" | relURL}}" rel="stylesheet">
+   <script type="text/javascript">
+      var baseurl = "{{.Site.BaseURL}}";
+   </script>
+   <script type="text/javascript" src="/js/search-workflow.js"></script>
+
+
+
 {{end}}
+
