--- a/layouts/partials/tag.html
+++ b/layouts/partials/tag.html
@@ -140,7 +140,10 @@
     }
 
   function search_content(){
-    
+    var url = window.location.pathname.split('/')
+    var tag_param = url.pop() || url.pop();
+    // console.log(window.href.substr(this.href.lastIndexOf('/') + 1))
+    // console.log(lastSegment)
     var param = document.getElementById('search-input').value;
 
     if (param.trim() ==""){
@@ -149,8 +152,10 @@
     }
     else{
         $("#post_nor").hide();
-
-        var results  = search(param);
+        // query = "+"+tag_param+" "+param
+        // console.log(query)
+        var results  = search_tag(tag_param, param);
+        console.log(results)
         $("#search-results").show();
         var search_results = document.getElementById('search-results')
         search_results.innerHTML = "";
@@ -162,7 +167,7 @@
                 html_el += '<div class="content col-md-6 col-xs-12 feature-description pull-left">';
             }
             else{
-                html_el += '<div class="content col-md-6 col-xs-12 feature-description pull-right"';
+                html_el += '<div class="content col-md-6 col-xs-12 feature-description pull-right">';
             }
             html_el += '<h2 class="workflow-title">'+results[page].title+'</h2>'
 
@@ -244,7 +249,7 @@
     }
      
    </script>
-   <script type="text/javascript" src="{{"js/lunr.min.js" | relURL}}"></script>
+   <script type="text/javascript" src="{{"js/lunr.js" | relURL}}"></script>
    <script type="text/javascript" src="{{"js/auto-complete.js" | relURL}}"></script>
    <link href="{{"css/auto-complete.css" | relURL}}" rel="stylesheet">
    <script type="text/javascript">
