--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -8,7 +8,7 @@
       <div class="post type-post status-publish format-standard hentry category-standard category-travel entry full-without-featured odd excerpt-1">
         
         <div class="entry-meta">
-          <span class="date">{{ .Date.Format "02 January" }}</span>	<span>  </span>
+          <span class="date">{{ .Date.Format "Jan 2, 2006" }}</span>	<span>  </span>
 
           
 
