--- a/layouts/partials/pagination.html
+++ b/layouts/partials/pagination.html
@@ -2,7 +2,7 @@
 {{ if gt $pag.TotalPages 1 }}
 {{ $.Scratch.Set "dot_rendered" false }}
 <div class="center-pag">
-<div class="pagination1">
+<div id="pagination" class="pagination1">
 <!-- <nav aria-label="page navigation" > -->
     <!-- <ul class=" "> -->
         <!-- Don't show on 1st and 2nd page -->
