--- a/layouts/partials/tag.html
+++ b/layouts/partials/tag.html
@@ -155,11 +155,15 @@
         // query = "+"+tag_param+" "+param
         // console.log(query)
         var results  = search_tag(tag_param, param);
-        console.log(results)
         $("#search-results").show();
         var search_results = document.getElementById('search-results')
+        if (results.length <1){
+            search_results.innerHTML = '<div style="padding: 30px 10px;"> No workflows found.</div>';
+        }
+        else{
         search_results.innerHTML = "";
         var html_el = ""
+
 
         for(var page in results){
             html_el += '<div class="row">';
@@ -245,6 +249,7 @@
         }
         search_results.innerHTML += html_el;
 
+    }
     }
     }
      
